Mejora de cabecera y foto en el body de index.html

--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
     <header class="header">
-        <img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg">
+        <<a href="./index.html"><img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg"></a>
         <div class="header__menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
