--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
     <header class="header">
-        <img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg">
+        <a href="./index.html"><img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg"></a>
         <div class="header__menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -19,5 +19,8 @@
             </ul>            
         </div>
     </header>
+    <div class="container">
+        <img src="../RegMezcal/Presentacion/TOBALA05 (1 de 1)LISTO.jpg" alt="TOBALA05">
+    </div>
 </body>
 </html>
