Mejoramos la pagina, header y agregamos un nuevo espacio

--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
 </head>
 <body class="body">
     <header class="header">
-        <a href="./index.html"><img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg"></a>
         <div class="header__menu">
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="historia.html">Historia</a></li>
+        </ul>
+        <a href="./index.html"><img class="header__img" src="/home/kali/Documents/REG/Pagina/RegMezcal/Logo transparente Blanco.png" alt="Reg"></a>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="historia.html">Historia</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>            
         </div>
     </header>
+
     <div class="container">
         <img src="../RegMezcal/Presentacion/TOBALA05 (1 de 1)LISTO.jpg" alt="TOBALA05">
     </div>
+
+    <section class="textarea">
+        <h1>"El sabor ancestral en tu paladar."</h1>
+        <p>
+            Mezcal Ancestral Rico en Gloria es la culminación de años de tradición 
+            y conocimiento que nace del amor familiar y el respeto hacia esta bebida ancestral.
+        </p>
+    </section>
+
 </body>
 </html>
