Contenido actualizado y mejorado

--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
     </header>
 
     <div class="container">
-        <img src="../RegMezcal/Presentacion/TOBALA05 (1 de 1)LISTO.jpg" alt="TOBALA05">
+        <img src="../RegMezcal/Presentacion/sielooespadinsinliso02 (1 de 1)FINAL.jpg" alt="espadin">
+        <div class="container__title">
+            Clan<br>
+            Rico En Gloria
+        </div>
+        <div class="container__text">
+            REG es una marca emergente de mezcal 100% ancestral oaxaqueño. En cada botellas no solo se encuentra la bebida
+            de los dioses, sino además está contenido más de 100 años de historia, cultura y tradicion mezcalera.
+        </div>
     </div>
 
-    <section class="textarea">
-        <h1>"El sabor ancestral en tu paladar."</h1>
-        <p>
-            Mezcal Ancestral Rico en Gloria es la culminación de años de tradición 
-            y conocimiento que nace del amor familiar y el respeto hacia esta bebida ancestral.
-        </p>
-    </section>
+    
 
 </body>
 </html>
