Acabando el día

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rico en Gloria</title>
 </head>
 <body class="body">
+
     <header class="header">
         <div class="header__menu">
         <ul>
@@ -34,7 +35,9 @@
         </div>
     </div>
 
-    
+    <div class="images">
+        <img src="../RegMezcal/Presentacion/sem01 (1 de 1)LISTO.JPG" alt="cielo azul">
+    </div>
 
 </body>
 </html>
