Agregamos todo el contenido de index y footer

--- a/index.html
+++ b/index.html
@@ -35,9 +35,35 @@
         </div>
     </div>
 
-    <div class="images">
-        <img src="../RegMezcal/Presentacion/sem01 (1 de 1)LISTO.JPG" alt="cielo azul">
+    <div class="containerTwo">
+        <img class="containerTwo__img" src="../RegMezcal/RegBN/Espadin_Muertos.JPG" alt="cielo azul">
+        <img class="containerTwo__img2" src="../RegMezcal/RegBN/TobalaCielo.jpg" alt="TobalaCielo">
+        <img class="containerTwo__img3" src="../RegMezcal/RegBN/CoyoteCIelo.jpg" alt="CoyoteCIelo">
+        <img class="containerTwo__img4" src="../RegMezcal/RegBN/112 (1 de 1)FINAL (2).JPG" alt="Presentacion">
     </div>
+    
+    <div class="texto">
+            <h1>La Gloria en la Tierra</h1>
+            Nuestros Mezcales son hechos con una pasión y amor inigualable,
+            La transparencia y pureza de nuestro destilado ,liquido cristalino, 
+            toques ahumados por el cocimiento de la penca, sabor a tierra Oaxaqueña 
+            y la garantía de ser 100% maguey,  refleja totalmente la visión 
+            de como debe ser un excelente Mezcal. 
+    </div>
+
+    <div class="containerTree">
+        <img class="containerTree__img" src="../RegMezcal/RegBN/112saturfinalplatocorregido (1 de 1)FINAL (2).JPG "alt="CoyoteCocina">
+    </div>
+
+    <footer class="footer">
+        <img class="footer__img" src="../RegMezcal/Logo transparente Blanco.png" alt="">
+        <ul class="footer__menu">
+            <li><a href="/blog.html">blog</a></li>
+            <li><a href="/blog.html">blog</a></li>
+            <li><a href="/blog.html">blog</a></li>
+            <li><a href="/blog.html">blog</a></li>
+        </ul>
+    </footer>
 
 </body>
 </html>
